# meth

./: .gitignore  LICENSE  README  README.md  pyproject.toml  setup.py
meth/: __init__.py
src/meth/: __init__.py  __main__.py  abacus.py  cli.py  crusade.py
